# artifact

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml
artifact/: DESIGN.md  README.md  pyproject.toml
artifact-documents/: README.md  pyproject.toml
artifact-documents-plugin/: pyproject.toml
artifact-documents-plugin/.claude-plugin/: plugin.json
artifact-documents-plugin/tests/: conftest.py  test_document_file_storage.py  test_package_marker.py  test_template_instantiate.py
artifact-documents/.claude-plugin/: plugin.json
artifact-documents/tests/: test_document_file_storage.py  test_template_instantiate.py
artifact-github/: README.md  pyproject.toml
artifact-github-plugin/: pyproject.toml
artifact-github-plugin/.claude-plugin/: plugin.json
artifact-github-plugin/tests/: conftest.py  test_gh.py  test_gh_schemes.py
artifact-github/.claude-plugin/: plugin.json
artifact-github/tests/: conftest.py
artifact-plugin/: pyproject.toml
artifact-plugin/.claude-plugin/: plugin.json
artifact-plugin/hooks/: sessionstart-discover.py
artifact-plugin/scripts/: discover.py  run-provider.py
artifact-plugin/tests/: test_cli.py  test_conformance.py  test_discover_and_registry.py  test_file_storage.py  test_graph.py  test_graph_lib.py  test_io.py  test_mediator.py  test_preferences.py  test_provider.py  test_render.py  test_render_more.py  test_scheme.py  test_script_entrypoints.py  test_sessionstart_hook.py  test_toml_more.py  test_validate.py  test_validate_more.py  test_xdg.py
(+43 files in other folders)
